# AnkiLeaderboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  __init__.py  main.py  manage.py  manifest.json  pyproject.toml  requirements-server.txt  runanki.py
.github/workflows/: codeql-analysis.yml  create-image.yml  release-on-tag.yml
.run/: Run anki.run.xml  run server.run.xml
api/: api.py  api2.py  api3.py  checkInput.py  config.py  manage_leagues.py  models.py  tests.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py
api/templates/: header+footer.html  leagues.html  privacy.html  retention.html  reviews.html  streak.html  time.html
server/: asgi.py  local.py  prod.py  settings.py  settings_base.py  urls.py  wsgi.py
src/: Leaderboard.py  League.py  Stats.py  __init__.py  api_connect.py  banUser.py  config.py  config_manager.py  homescreenLeaderboard.py  reportUser.py  resetPassword.py  userInfo.py  version.py
src/streakAchievement/: streakAchievement.py
tools/: ankiaddon.py  build_ui.sh
