[project]
name = "anki-leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aqt>=25.2",
    "mypy>=1.15.0",
    "pyqt6>=6.8.1",
    "pre-commit>=4.1.0",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = [
    "argon2-cffi>=23.1.0",
    "django>=5.1.7",
    "praw>=7.8.1",
    "ruff>=0.11.0",
]
mypy = [
    "types-requests>=2.32.0.20250306",
]
